--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@ nav {
   background:#231f20;
   overflow:hidden;
 
+
   .logo {
     padding-left: 250px;
     padding-top:15px;
@@ -50,10 +51,9 @@ nav {
 }
 
 .hero {
-  height:600px;
-  width:100%;
+  background-size: cover;
+  height:300px;
   background-image: url('https://hawkins-staging.herokuapp.com/public/img/home/winter-mountains@2x.jpg');
-  overflow:hidden;
   color:white;
   text-align:center;
   padding-top:200px;
@@ -69,4 +69,8 @@ nav {
   .title {
     line-height: .25;
   }
+}
+
+.search {
+  overflow:hidden;
 }
